--- a/.github/workflows/multi-job-pipeline.yml
+++ b/.github/workflows/multi-job-pipeline.yml
@@ -25,4 +25,24 @@ jobs:
       - name: List files
         run: ls -lrth
 
+      - name: Upload file into artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: newfile-artifact
+          path: newfile.txt
 
+  verify:
+    runs-on: ubuntu-latest
+    needs: build   # ✅ run this job only after build job finishes
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v5
+        with:
+          name: newfile-artifact
+
+      - name: List files
+        run: ls -lrth
+
+      - name: Check for "successfully" in file
+        run: grep -i "successfully" newfile.txt
