--- a/.github/workflows/multi-job-pipeline.yml
+++ b/.github/workflows/multi-job-pipeline.yml
@@ -30,6 +30,8 @@ jobs:
         with:
           name: newfile-artifact
           path: newfile.txt
+      - name: sleep 60
+        run: sleep 60
 
   verify:
     runs-on: ubuntu-latest
