--- a/.github/workflows/multi-job-pipeline.yml
+++ b/.github/workflows/multi-job-pipeline.yml
@@ -6,7 +6,7 @@ on:
       - main   # ✅ only run when pushing to main branch
 
 jobs:
-  build:
+  create_file:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,12 +30,13 @@ jobs:
         with:
           name: newfile-artifact
           path: newfile.txt
-      - name: sleep 60
+
+      - name: Sleep 60
         run: sleep 60
 
-  verify:
+  verify:   # ✅ second independent job
     runs-on: ubuntu-latest
-    needs: build   # ✅ run this job only after build job finishes
+    #needs: create_file   # ✅ wait until "build" finishes
 
     steps:
       - name: Download artifact
@@ -46,5 +47,5 @@ jobs:
       - name: List files
         run: ls -lrth
 
-      - name: Check for "successfully" in file
-        run: grep -i "successfully" newfile.txt
+      - name: Display file content
+        run: cat newfile.txt
