--- a/.github/workflows/multi-job-pipeline.yml
+++ b/.github/workflows/multi-job-pipeline.yml
@@ -36,7 +36,7 @@ jobs:
 
   verify:   # ✅ second independent job
     runs-on: ubuntu-latest
-    #needs: create_file   # ✅ wait until "build" finishes
+    needs: create_file   # ✅ wait until "build" finishes
 
     steps:
       - name: Download artifact
